platform/ntfy/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://ntfy.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Notifications
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: ntfy.png
    gethomepage.dev/name: ntfy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: ntfy
          port: http
  tls:
    secretName: ntfy-tls
